--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 Week 6/DistanceFormulaTest.exe
 Week 7/W7D1_InClass_MathArrayStructure.exe
 Week 6/DistanceFormulaTest.exe
+Week 7/W7D1_InClass_MathStructure.exe
+Week 7/W7D1_InClass_Array.exe
