--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ Week 7/W7D1_InClass_MathArrayStructure.exe
 Week 6/DistanceFormulaTest.exe
 Week 7/W7D1_InClass_MathStructure.exe
 Week 7/W7D1_InClass_Array.exe
+Week 7/W7D2_InClass_LogicalsAndStructures.exe
