feb 22 24 class code pt 3

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ Week 7/W7D1_InClass_MathStructure.exe
 Week 7/W7D1_InClass_Array.exe
 Week 7/W7D2_InClass_LogicalsAndStructures.exe
 Week 7/W7D2_InClass_Structures.exe
+Week 7/W7D2_InClass_SwitchAndLoops.exe
