added another exe to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ Week 7/W7D1_InClass_Array.exe
 Week 7/W7D2_InClass_LogicalsAndStructures.exe
 Week 7/W7D2_InClass_Structures.exe
 Week 7/W7D2_InClass_SwitchAndLoops.exe
+Week 6/W6D1_Albaran_MathCompilersC.exe
