final in class code + gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ Week 7/W7D2_InClass_LogicalsAndStructures.exe
 Week 7/W7D2_InClass_Structures.exe
 Week 7/W7D2_InClass_SwitchAndLoops.exe
 Week 6/W6D1_Albaran_MathCompilersC.exe
+Week 8/W8D1_InClass_FlowControlForLoops.exe
