--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ Week 7/W7D2_InClass_SwitchAndLoops.exe
 Week 6/W6D1_Albaran_MathCompilersC.exe
 Week 8/W8D1_InClass_FlowControlForLoops.exe
 Week 8/W8D1_InClass_KeyboardInput.exe
+Week 8/W8D1_InClass_MoreFlowControl.exe
