--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ Week 6/W6D1_Albaran_MathCompilersC.exe
 Week 8/W8D1_InClass_FlowControlForLoops.exe
 Week 8/W8D1_InClass_KeyboardInput.exe
 Week 8/W8D1_InClass_MoreFlowControl.exe
+Week 8/W8D1_InClass_Pointers.exe
