--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 Week 6/DistanceFormulaTest.exe
 Week 7/W7D1_InClass_MathArrayStructure.exe
-Week 6/DistanceFormulaTest.exe
 Week 7/W7D1_InClass_MathStructure.exe
 Week 7/W7D1_InClass_Array.exe
 Week 7/W7D2_InClass_LogicalsAndStructures.exe
@@ -11,3 +10,4 @@ Week 8/W8D1_InClass_FlowControlForLoops.exe
 Week 8/W8D1_InClass_KeyboardInput.exe
 Week 8/W8D1_InClass_MoreFlowControl.exe
 Week 8/W8D1_InClass_Pointers.exe
+Week 9/W9D2_Albaran_TrafficLightController.exe
