class code + gitignore append

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ Week 8/W8D1_InClass_MoreFlowControl.exe
 Week 8/W8D1_InClass_Pointers.exe
 Week 9/W9D2_Albaran_TrafficLightController.exe
 Week 9/W9D1_InClass_Stopwatch.exe
+Week 9/W9D2_InClass.exe
