--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ Week 8/W8D1_InClass_KeyboardInput.exe
 Week 8/W8D1_InClass_MoreFlowControl.exe
 Week 8/W8D1_InClass_Pointers.exe
 Week 8/W8D1_Albaran_MathFlowinC_1.exe
+Week 8/W8D1_Albaran_MathFlowinC_2.exe
 Week 9/W9D2_Albaran_TrafficLightController.exe
 Week 9/W9D2_InClass.exe
 Week 9/W9D1_Albaran_Stopwatch.exe
