[WIP] TLC alt code try

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ Week 8/W8D1_Albaran_MathFlowinC_2.exe
 Week 9/W9D2_Albaran_TrafficLightController.exe
 Week 9/W9D2_InClass.exe
 Week 9/W9D1_Albaran_Stopwatch.exe
+Week 9/tlc_temp.exe
